tests/script_runtime_errors/patch_move_key_exists/error.txt
Error: 
    1 | patch {"a": 1, "b": 2} of
      | ^^^^^^^^^^^^^^^^^^^^^^^ The key that is supposed to be written to already exists: b
